--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /FrontEnd-Lets get started with react-Task-7/node_modules
 /FrontEnd-Lets get started with react-Task-8/node_modules
+/FrontEnd-Creating restaurent website Task-1
